...
        mainAxisAlignment: MainAxisAlignment.center,
        children: [
          Icon(Icons.search_off_rounded,
              size: 80, color: textColor.withValues(alpha:0.2)),
          const SizedBox(height: 16),
          Text(
            'لم نجد نباتات مطابقة لبحثك',
            style: GoogleFonts.cairo(
              fontSize: 18,
              fontWeight: FontWeight.bold,
              color: textColor.withValues(alpha:0.6),
            ),
          ),
...
